--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@directus/sdk": "^10.1.1",
     "dayjs": "^1.11.3",
     "next": "12.2.2",
+    "next-pwa": "^5.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
